Bug 1790169 - Add buffer size check to DrawTargetWebgl::Init() r=lsalzman

Differential Revision: https://phabricator.services.mozilla.com/D157085